@startuml
'https://plantuml.com/class-diagram

class TodoList {
    main()
    start()
}

class TodoListController {
    Button clearListButton
    TextField titleField
    Button setTitleButton
    TextField pathField
    Button addButton
    TextField dateField
    TextField descriptionField
    CheckBox completeBox
    Button saveButton
    Button updateButton
    Button removeButton
    ListView<Item>: itemDisplay
    Button dateSortButton
    Button showAllButton
    Button showCompleteButton
    Button showIncompleteButton
    Button loadButton
    ItemList itemList
    ObservableList<Item> filteredList
    addButtonClicked()
    removeButtonClicked()
    saveButtonClicked()
    loadButtonClicked()
    updateButtonClicked()
    showAllClicked()
    showCompleteClicked()
    showIncompleteClicked()
    setTitleClicked()
    addToList()
    removeFromList()
    updateItem()
    showComplete()
    showIncomplete()
    setTitle()
    save()
    load()
    initialize()
    refresh()
    dateSortClicked()
    clearListClicked()
    clearList()
}

class Item {
    String description
    String date
    Boolean completion
    Item()
    getDescription()
    setDescription()
    getDate()
    setDate()
    isComplete()
    setCompletion()
    toString()
}

class ItemList {
    String title
    ObservableList<Item>: items
    ItemList()
    getTitle()
    setTitle()
    getItems()
    setItems()
    addItem()
    dateSort()
}

class TodoListIO {
    saveList()
    loadList()
}

class InputValidator {
    isNull()
    descriptionValidator()
    dateValidator()
    pathValidator()
}

javafx.Application <|- TodoList
TodoList - TodoListController
TodoListController -- ItemList
TodoListController - Item
TodoListController -- TodoListIO
TodoListController - InputValidator
ItemList - Item
TodoListIO - ItemList

@enduml